@@ -824,7 +824,8 @@ creations/deletions), or "all".</description>
   <value>FAILED</value>
   <description>The filter for controlling the output of the task's userlogs sent
                to the console of the JobClient. 
-               The permissible options are: NONE, FAILED, SUCCEEDED and ALL.
+               The permissible options are: NONE, KILLED, FAILED, SUCCEEDED and 
+               ALL.
   </description>
 </property>
 
